--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Technology</div>
-            <p class="category">Indian Institute Of Information Technology Una</p>
+            <div class="h4">Bachelor of Technology</div>
+            <p class="category-subprofile">Indian Institute Of Information Technology Una</p>
             <p>Graduated with majors in Information Technology with a CGPI of 8.37</p>
           </div>
         </div>
@@ -245,7 +245,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">10+2</div>
-            <p class="category">Delhi Public School Ghaziabad</p>
+            <p class="category-subprofile">Delhi Public School Ghaziabad</p>
             <p>Passed Senior Secondary with 95.8%.</p>
           </div>
         </div>
@@ -262,7 +262,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">10th</div>
-            <p class="category">St. Mary's Convent School Ghaziabad</p>
+            <p class="category-subprofile">St. Mary's Convent School Ghaziabad</p>
             <p>Passed Matriculation with 91.4%</p>
           </div>
         </div>
