--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="h2 title">Dev Tyagi</div>
           <p class="category text-white">Software Engineer</p>
           <!-- <a class="btn btn-primary" href="https://docs.google.com/document/d/1C-UqZ3sGMPg9VRkDMLEGH79HWY_4mrmrIiBw5JmrQQw/edit?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Cover Letter</a> -->
-          <a class="btn btn-primary" href="https://drive.google.com/file/d/1sq-F4XrnuZ6WFKXCtI7g9PBLmr9FhHj-/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
+          <a class="btn btn-primary" href="https://drive.google.com/file/d/1s38UPhVOdtVcd2S6J93A2e5yJIMBgPN3/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
         </div>
       </div>
       <div class="section">
@@ -162,6 +162,41 @@
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>June 2020 - Present</p>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Defence Research and Development Organisation</div>
+            <p>Research and Development Intern</p>
+            <p>Worked on Target Detection using hyperspectral image processing using Python by visualising reflectance spectra of multiple objects</p>
+            <p>Worked on the development of an algorithm that extracts essential features of the Reflectance spectra and detect targets and potential threats</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>June 2020 - Present</p>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Sensegrass Inc</div>
+            <p>Full Stack Web Development Intern</p>
+            <p>Serverless Deployment of Weather API , signup and login services using AWS Lambda ,also configured a multistage CI/CD pipeline using
+              Jenkins in AWS EC2 instance for seamless development for other services</p>
+            <p>DevelopedWeatherAPIusingnode.jsenhancingcroppredictionandfarmingstrategies,alsointegrateditwithfrontendusingreact.js.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="h4 text-center mb-4 title">Other Experiences & POR</div>
       <div class="card">
         <div class="row">
@@ -172,10 +207,9 @@
           </div>
           <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Defence Research and Development Organisation</div>
-              <p>Research and Development Intern</p>
-              <p>Worked on Target Detection using hyperspectral image processing using Python by visualising reflectance spectra of multiple objects</p>
-              <p>Worked on the development of an algorithm that extracts essential features of the Reflectance spectra and detect targets and potential threats</p>
+              <div class="h5">GNU Linux User's Group GLUG NIT-H</div>
+              <p>Volunteer</p>
+              <p>Organised SFD, Software freedom days, multiple Programming competition, Talks, Webinars & Fresher orientation</p>
             </div>
           </div>
         </div>
@@ -207,7 +241,7 @@
             <div class="card-body">
               <div class="h5">FORCE</div>
               <p>Coordinator</p>
-              <p>Programming Society of our college. Organised Programming competetions, Talks, Webinars & Fresher orientation</p>
+              <p>Programming Society of our college. Organised Programming competition, Talks, Webinars & Fresher orientation</p>
             </div>
           </div>
         </div>
